--- a/public/css/app-dark.css
+++ b/public/css/app-dark.css
@@ -123,7 +123,8 @@ section {
 }
 
 body {
-    background-color: #111827;
+    /* background-color: #111827; */
+    background-color: #1827;
     color: #f3f4f6;
     font-family: Figtree, sans-serif;
     font-size: 1rem;
